Update 2018-04-15-jvm-retrieve.md